[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-sherlock-core"
version = "0.6.2"
description = "A python wrapper for Ansys Sherlock"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ansys-api-sherlock==0.1.27",
    "grpcio>=1.17",
    "importlib-metadata>=4.0,<5; python_version<='3.10'",
    "protobuf~=3.20",
]

[project.optional-dependencies]
tests = [
    "grpcio==1.62.1",
    "protobuf==3.20.3",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
]
doc = [
    "ansys-sphinx-theme==0.15.2",
    "numpydoc==1.7.0",
    "Sphinx==6.2.1", # BLOCKED BY sphinx-design - Cannot upgrade to Sphinx 7 for now
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-gallery==0.15.0",
]

[project.urls]
Documentation = "https://sherlock.docs.pyansys.com"
Homepage = "https://github.com/ansys/pysherlock"
Source = "https://github.com/ansys/pysherlock"
Tracker = "https://github.com/ansys/pysherlock/issues"

[tool.flit.module]
name = "ansys.sherlock.core"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.sherlock"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = [
    "tests",
]

[tool.codespell]
ignore-words = "doc/styles/Vocab/ANSYS/accept.txt"
quiet-level = 3
